--- a/portfolio-coffee shop.html
+++ b/portfolio-coffee shop.html
@@ -26,6 +26,8 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+
 
   <!-- =======================================================
   * Template Name: MyResume
