--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -100,19 +100,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Transportation churn.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/House Rent.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" alt="">
             </div>
 
           </div>
@@ -127,10 +123,7 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                This project will talk about the use of Convolutional Neural Network for Image Classification of rock-paper-scissors images. To build the model, we will use Python with help of Tensorflow and Keras packages.
               </p>
 
               <div class="testimonial-item">
